--- a/static/style/GlobalStyle.css
+++ b/static/style/GlobalStyle.css
@@ -1,20 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Kolker+Brush&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
+:root {
+    --light-primary: white;
+    --violet: #5842b1;
+}
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     font-family: 'Dancing Script', cursive;
     font-family: 'Kolker Brush', cursive;
     font-family: 'Nunito', sans-serif;
 }
 
-:root {
-    --light-primary: white;
+body {
+    background-color: #ffdffb;
 }
 
-body {
-    background-color: antiquewhite;
+a {
+    color: currentColor;
+}
+
+a:hover {
+    color: currentColor;
+    text-decoration: unset;
 }
 
 /* Linear Gradient Default */
@@ -54,10 +64,6 @@ body {
     box-shadow: none;
 }
 
-.btn-customize:hover {
-    transform: translateY(-3px) scale(1.02);
-    box-shadow: 0 0 5px #00000044;
-}
 
 .btn-customize:active {
     background-color: #5842b188;
@@ -70,5 +76,32 @@ body {
     background-color: #efebff;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .15) !important;
     animation-duration: 1s;
-    
+}
+
+/* Animation */
+.animation {
+    animation-duration: 1s;
+}
+
+
+.section-title::before {
+    position: absolute;
+    content: "";
+    width: calc(100% + 80px);
+    height: 2px;
+    top: 4px;
+    left: -40px;
+    background: var(--primary);
+    z-index: -1;
+}
+
+.section-title::after {
+    position: absolute;
+    content: "";
+    width: calc(100% + 120px);
+    height: 2px;
+    bottom: 5px;
+    left: -60px;
+    background: var(--primary);
+    z-index: -1;
 }
