--- a/static/style/HeaderBanner.css
+++ b/static/style/HeaderBanner.css
@@ -34,3 +34,9 @@
     text-align: left;
     font-weight: 900;
 }
+
+
+.banner .btn-customize:hover {
+    transform: translateY(-3px) scale(1.02);
+    box-shadow: 0 0 5px #00000044;
+}
