--- a/static/style/Footer/Footer.scss
+++ b/static/style/Footer/Footer.scss
@@ -1,4 +1,5 @@
 .Footer {
+    box-shadow: 0 -.5rem 1rem rgba(0, 0, 0, .15) !important;
 
     h4 {
         margin-left: 5px;
@@ -34,7 +35,7 @@
         }
 
         &:active {
-           color: #ffffff88;
+            color: #ffffff88;
         }
     }
 
