--- a/static/style/NavigationBar/NavigationBar.css
+++ b/static/style/NavigationBar/NavigationBar.css
@@ -52,7 +52,8 @@
   font-weight: 500;
 }
 .NavigationBar .nav-item + .nav-item {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .NavigationBar .nav-item {
   text-align: center;
@@ -60,6 +61,11 @@
   padding: 0px 8px;
   border-radius: 10px;
   transition: 0.2s;
+}
+.NavigationBar .nav-item.active {
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.2509803922);
+  color: var(--violet) !important;
 }
 .NavigationBar .nav-item:hover {
   border-radius: 20px;
