--- a/static/style/HomePage/HomePage.scss
+++ b/static/style/HomePage/HomePage.scss
@@ -1,6 +1,7 @@
 .HomePage {
     .card {
 
+        height: 100%;
         border-radius: 18px;
         border: none;
         background-color: #8f79fcbb;
