--- a/static/style/SignIn/SignIn.css
+++ b/static/style/SignIn/SignIn.css
@@ -106,4 +106,7 @@
   font-size: 25px;
   color: rgba(0, 0, 0, 0.6);
   cursor: pointer;
+}
+.SignIn .form-group .right-icon.is-valid {
+  color: var(--success);
 }/*# sourceMappingURL=SignIn.css.map */
