--- a/static/style/NavigationBar/NavigationBar.scss
+++ b/static/style/NavigationBar/NavigationBar.scss
@@ -9,6 +9,7 @@
         }
 
         .btn {
+            line-height: 38px;
             padding: 0 25px 0 20px !important;
             color: var(--light-primary) !important;
             background-color: #5842b1;
