--- a/static/style/Doing/Doing.css
+++ b/static/style/Doing/Doing.css
@@ -77,6 +77,7 @@
   padding: 15px 20px;
   background-color: #BFACE2;
   border-radius: 20px;
+  transition: 0.3s;
 }
 .Display .answer-item * {
   cursor: pointer;
@@ -89,6 +90,9 @@
 }
 .Display .answer-item.correct {
   background-color: #39AEA9;
+}
+.Display .answer-item:hover {
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.4862745098);
 }
 .Display .answer-item .choose-tag {
   margin-right: 1rem;
