--- a/static/style/SignIn/SignIn.scss
+++ b/static/style/SignIn/SignIn.scss
@@ -15,6 +15,7 @@
         top: 10%;
         transform: rotate(-63deg) scale(1.5);
         z-index: 0;
+        animation: fadeIn 1s ease;
     }
 
     &::before {
@@ -27,18 +28,7 @@
         left: 25%;
         bottom: 10%;
         transform: rotate(-63deg) scale(1.5);
-    }
-
-    &::before::after {
-        content: "";
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        background-color: #ffffff18;
-        border-radius: 10px;
-        left: 25%;
-        top: 5%;
-        transform: rotate(-63deg) scale(1.5);
+        animation: fadeIn 1s ease;
     }
 
     .stamp {
@@ -49,6 +39,7 @@
         left: 5%;
         top: 5%;
         transform: rotate(10deg) scale(1.5);
+        animation: fadeIn 1s ease;
     }
 
     // Box Style
