--- a/app/components/app-signup/app-signup.template.html
+++ b/app/components/app-signup/app-signup.template.html
@@ -113,7 +113,7 @@
 
                     <input
                         type="submit"
-                        value="Login"
+                        value="Sign Up"
                         ng-disabled="signup.$invalid && isUsed == 1"
                         class="btn bg-linear-gradient w-100 mb-3 hover"
                     />
