--- a/static/style/Doing/Doing.css
+++ b/static/style/Doing/Doing.css
@@ -4,6 +4,13 @@
 .Menu .box {
   border-radius: 15px;
 }
+.Menu .box .timer {
+  font-size: 27px;
+}
+.Menu .box .timer span {
+  font-size: 33px;
+  transition: 0.1s;
+}
 .Menu .box .question-container {
   display: flex;
   justify-content: start;
@@ -23,16 +30,16 @@
   color: white;
 }
 .Menu .box .question-container .item.done {
-  background-color: #0AA1DD;
+  background-color: #0aa1dd;
 }
 .Menu .box .question-container .item.correct {
-  background-color: #39AEA9;
+  background-color: #39aea9;
 }
 .Menu .box .question-container .item.note {
-  background-color: #F2CD5C;
+  background-color: #f2cd5c;
 }
 .Menu .box .question-container .item.incorrect {
-  background-color: #F34573;
+  background-color: #f34573;
 }
 .Menu .box .question-container .item.doing {
   border: 0.1rem solid rgba(88, 66, 177, 0.7333333333);
@@ -55,6 +62,30 @@
   background-color: whitesmoke;
   border-radius: 15px;
 }
+.Display .plastic {
+  min-height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: #ece2fe;
+  border-radius: 15px;
+  top: 0;
+  left: 0;
+}
+.Display .plastic button {
+  font-size: 40px;
+  font-weight: 700;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  transition: all 0.3s !important;
+}
+.Display .plastic button:hover {
+  transform: scale(1.04) translateY(-5px);
+}
 .Display .btn {
   font-size: 20px;
 }
@@ -75,7 +106,7 @@
 }
 .Display .answer-item {
   padding: 15px 20px;
-  background-color: #BFACE2;
+  background-color: #bface2;
   border-radius: 20px;
   transition: 0.3s;
 }
@@ -83,19 +114,40 @@
   cursor: pointer;
 }
 .Display .answer-item.checked {
-  background-color: #F2CD5C;
+  background-color: #f2cd5c;
 }
 .Display .answer-item.incorrect {
-  background-color: #F34573;
+  background-color: #f34573;
 }
 .Display .answer-item.correct {
-  background-color: #39AEA9;
+  background-color: #39aea9;
 }
 .Display .answer-item:hover {
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.4862745098);
 }
 .Display .answer-item .choose-tag {
   margin-right: 1rem;
+  margin-left: 35px;
+  position: relative;
+  transition: all 0.2s;
+}
+.Display .answer-item .choose-tag.checked::before {
+  content: "\f270" !important;
+}
+.Display .answer-item .choose-tag::before {
+  content: "\f28a";
+  font-size: 20px;
+  font-family: bootstrap-icons !important;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -30px;
+}
+.Display .answer-item .choose-tag.multiple.checked::before {
+  content: "\f271" !important;
+}
+.Display .answer-item .choose-tag.multiple::before {
+  content: "\f584" !important;
 }
 .Display .answer-item .choose-tag:after {
   content: counter(item, upper-alpha) ". ";
