--- a/app/components/app-doing/app-doing.template.html
+++ b/app/components/app-doing/app-doing.template.html
@@ -1,5 +1,5 @@
 <!-- Content -->
-<main class="container-fluid prevent-select mb-5 mt-4">
+<main logger class="container-fluid prevent-select mb-5 mt-4">
     <div class="row">
         <!-- Menu -->
         <div class="col-12 col-md-4 d-flex">
@@ -22,7 +22,7 @@
                     </div>
                     <hr />
                     <div class="question-container mb-3">
-                        <span class="item mb-2 mx-1" ng-repeat="question in questions">{{$index + 1}}</span>
+                        <span class="item mb-2 mx-1" ng-repeat="question in questions" ng-class="{done: question.done, note: question.note}" ng-click="handler.goto($index)" >{{$index + 1}}</span>
                     </div>
 
                     <h6 class="text-center mb-2"><b>Done: </b> 14/20 Questions</h6>
@@ -38,13 +38,13 @@
         <div class="col-12 col-md-8">
             <div class="wow fadeInRight Display p-5 mb-3 position-relative">
                 <nav ng-show="doing > -1" class="d-flex justify-content-between mb-4">
-                    <button ng-click="doing = doing - 1" class="btn rounded btn-customize px-4 hover">
+                    <button ng-click="handler.prev()" class="btn rounded btn-customize px-4 hover">
                         <i class="bi bi-arrow-left-circle"></i>
                     </button>
                     <button class="btn rounded btn-customize px-4 hover" ng-click="note = !note" ng-init="true">
-                        <i class="bi" ng-class="{'bi-bookmark-star-fill': note, 'bi-bookmark-star' :!note}" ></i>
+                        <i class="bi" ng-class="{'bi-bookmark-star-fill': note, 'bi-bookmark-star' :!note}" ng-click="handler.note()"></i>
                     </button>
-                    <button ng-click="doing = doing + 1" class="btn rounded btn-customize px-4 hover">
+                    <button ng-click="handler.next()" class="btn rounded btn-customize px-4 hover">
                         <i class="bi bi-arrow-right-circle"></i>
                     </button>
                 </nav>
@@ -57,16 +57,19 @@
                     <div ng-show="$index == doing" class="answer-container">
                         <div
                             ng-repeat="answer in item.answers"
-                            ng-class="{checked: check}"
-                            ng-click="check = true"
+                            ng-class="{checked: true, checked : answer.selected}"
+                            ng-click="handler.select($parent.$index, answer.id)"
                             class="answer-item mb-4 d-flex align-items-center"
                         >
-                            <span class="choose-tag" ng-class="{'checked': check, 'multiple': item.isMultipleChoice}"></span>
+                            <span
+                                class="choose-tag"
+                                ng-class="{'multiple': item.isMultipleChoice, checked : answer.selected }"
+                            ></span>
                             <label class="mb-0" for="answer1">{{answer.content}}</label>
                         </div>
 
                         <div class="d-flex">
-                            <button class="btn btn-customize rounded hover px-4 ml-auto d-flex align-items-center">
+                            <button ng-click="handler.next()" class="btn btn-customize rounded hover px-4 ml-auto d-flex align-items-center">
                                 Next question
                                 <i class="bi bi-arrow-right ml-2"></i>
                             </button>
