--- a/app/components/app-modal/app-modal.template.html
+++ b/app/components/app-modal/app-modal.template.html
@@ -1,10 +1,11 @@
 <!-- Modal -->
 <div
-    class="modal fade UserInfo"
+    class="modal fade UserInfo bg-black-35"
     id="{{$ctrl.idModal}}"
     tabindex="-1"
     role="dialog"
     aria-hidden="true"
+    data-backdrop="false"
 >
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -23,6 +24,7 @@
                     ng-click="button.event()"
                     type="button"
                     class="btn rounded px-4"
+                    data-dismiss="modal"
                 >
                     {{button.text || "Button"}}
                 </button>
